--- a/Prison_AdminManage_System/src/Style/AddScreen.css
+++ b/Prison_AdminManage_System/src/Style/AddScreen.css
@@ -1,7 +1,11 @@
-.cover{
+.Add_cover{
     width: 100%;
     height: 100%;
     background-color: white;
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
 }
 .headings{
     width: 100%;
@@ -11,18 +15,36 @@
     align-items: center;
 }
 .img_cover{
+    /* width: 100%;
+    height: 250px;
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    background-color: blue; */
+    
+    
+}
+.img_row{
     width: 100%;
     height: 120px;
     display: flex;
+    flex-direction:row;
     justify-content: center;
-    align-items: center;
+    align-items: center;  
+}
+.image1{
+    width: 200px;
+    height: 100px;
 }
 .form_cover{
     width: 100%;
-    height: 480px;
+    height: 380px;
     border-width: 0.5px;
     border-color: gray;
-    
+    /* bottom: 0%;
+    left: 0%; */
+    background-color: white;    
 }
 .input_infor{
     width: 150px;
