--- a/Prison_AdminManage_System/src/Style/Account.css
+++ b/Prison_AdminManage_System/src/Style/Account.css
@@ -20,9 +20,9 @@
     justify-content:center;
     align-items: center;
 }
-.row_input{
+.row_Accinput{
     width: 100%;
-    height: 100px;
+    height: 100px; 
     display: flex;
     justify-content: center;
     align-items: center;
