--- a/Prison_AdminManage_System/src/Style/Dashboard.css
+++ b/Prison_AdminManage_System/src/Style/Dashboard.css
@@ -56,6 +56,6 @@
     box-shadow: 4px 4px 8px #cbcbcb,4px -4px 8px #ffffff;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    justify-content:space-around;
+    align-items:center;
 }
