--- a/Prison_AdminManage_System/src/Style/SideNaveBar.css
+++ b/Prison_AdminManage_System/src/Style/SideNaveBar.css
@@ -131,7 +131,7 @@ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida San
     letter-spacing: 1px;
 }
 .inner_Container{
-    background-color: red;
+    background-color: white;
     width: 100%;
     height: 650px;
 }
