--- a/Prison_AdminManage_System/src/Style/Dashboard.css
+++ b/Prison_AdminManage_System/src/Style/Dashboard.css
@@ -45,6 +45,7 @@
     width: 100%;
     padding: 20px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 
