--- a/Prison_AdminManage_System/src/Style/SideNaveBar.css
+++ b/Prison_AdminManage_System/src/Style/SideNaveBar.css
@@ -135,4 +135,20 @@ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida San
     width: 100%;
     height: 650px;
 }
+.boxRow{
+    width: 100%;
+    height: 120px;
+    display: flex;
+    flex-direction:row;
+    justify-content:space-around;
+    align-items:center;
+}
+.numberBox{
+    width: 500px;
+    height: 300px;
+    border-radius: 10px;
+    border-width: 1px;
+    justify-content: center;
+    align-items: center;
+}
 
