--- a/Prison_AdminManage_System/src/Style/Visists.css
+++ b/Prison_AdminManage_System/src/Style/Visists.css
@@ -19,5 +19,25 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction:column; 
+    /* flex-direction:column;  */
+}
+.conView{
+    border-radius: 20px;
+    border-width: 0.5;
+    width: 300px;
+    height: 50px;
+    padding: 20px;
+}
+.innerView{
+    display: flex;
+    justify-content:space-between;
+    align-items:center;
+    flex-direction:row;   
+}
+.deletebtn{
+    background-color: red;
+    height: 20px;
+    width: 50px;
+    justify-content: center;
+    align-items:center;
 }
