--- a/Prison_AdminManage_System/src/Style/SideNaveBar.css
+++ b/Prison_AdminManage_System/src/Style/SideNaveBar.css
@@ -15,14 +15,14 @@
 }
 
 .inner-container{
-    height: 650px;
+    height: 600px;
     width: 200px;
     background-color: black;
     display: flex;
    flex-direction: column;
     justify-content:center;
     align-items:center;
-    
+    /* top: 20%; */
 }
 .inner_Container{
     background-color: white;
@@ -41,9 +41,7 @@
     width: 200px;
     object-fit: fill;
 }
-.nav-list{
-    
-}
+
 
 .nav-menu{
     display: flex;
@@ -78,8 +76,8 @@ justify-content:space-around;
 align-items:stretch;
 
 }
-.SidebarList .row{
- width: 80px; 
+ .row{
+ width: 100%; 
  height: 40px;
  /* border: 1px solid white; */
 list-style-type: none;
@@ -94,11 +92,11 @@ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida San
 
 infor@RPANUGGETS.com
 sub:RPA Intern Remote Role */
-.SidebarList .row:hover{
+.row:hover{
     cursor: pointer;
     background-color: yellow;
     color: #000;
-    width:100px;
+    width:100%;
     height: 40px;
     left: 0px;
     border-radius: 20px;
@@ -181,13 +179,58 @@ sub:RPA Intern Remote Role */
         display: block;
         
     }
-    .inner-container{
+    .separator{
+        height: 200px;
+    }
+        .nav-links-mobile{
+        
+        position: absolute;
+        display: block;
+        list-style: none;
+        box-shadow: rgba(50, 50, 93, 0.23)0 50px 100px -20px,rgba(0, 0, 0, 0.3)0 30px 60px -30;
+        transition: all 0.5s ease-in-out;
+        width: 100%;
+        height: 100vh;
+        z-index: 888;
+    }
+    .logo{display: none;}
+    /* .close,.open{
+        position: absolute;
+        top: 35px;
+        right: 20px;
+        color:#000;
+        display: block;
+        font-size: 25px;
+        z-index: 999;
+    } */
+    .toggle{
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-end;
+        width: 100%;
         height: 50px;
+     background-color: #ce3a3a;
+     top: 0%;
+    }
+    .SidebarList{
+        height: 300px;
+        padding: 0;
+        width: 100%;
+        position: absolute;
+        display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    align-items:stretch;
+    }
+    
+    .inner-container{
+        height: 200px;
         width: 100%;
         background-color: black;
         display: flex;
        position: absolute;
         justify-content:center;
         align-items:center;
+        top: 0%;
     }
     }
