--- a/Prison_AdminManage_System/src/Style/SignIn.css
+++ b/Prison_AdminManage_System/src/Style/SignIn.css
@@ -32,3 +32,14 @@
     width: 100%;
     height: 100px;
 }
+@media only screen and (max-width:600px){
+    .default{
+        display: none;
+    }
+    .default-mobile{
+        display: block;
+        
+    }
+  
+    }
+
