--- a/Prison_AdminManage_System/src/Style/Welcome.css
+++ b/Prison_AdminManage_System/src/Style/Welcome.css
@@ -73,3 +73,46 @@
     cursor:'pointer'
     /* height: 100px; */
 }
+@media only screen and (max-width:600px){
+    .default{
+        display: none;
+    }
+    .default-mobile{
+        display: block;
+        
+    }
+    .cover{
+        background-color: yellow;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    .logo-container{display: none;}
+    .form-cover{
+   
+        border-radius: 65px;
+        background-color: white;
+        width: 100%;
+        height: 80%;
+       
+        /* position: absolute; */
+        /* padding: 30px 10px; */
+    }
+    .form_container{
+        height: 400px;
+        width: 300px;
+        /* background-color: aqua; */
+        position: absolute;
+        /* top: 20%;
+        right: 5%;
+        left: 10%; */
+        padding: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+     
+    }
+    }
